# parrotjoy

./: .gitignore  .travis.yml  MANIFEST.in  README.md  appveyor.yml  aubio-0.4.9-cp37-cp37m-win32.whl  requirements.dev.txt  requirements.txt  run_game.py  setup.cfg  setup.py  tox.ini
.github/workflows/: publish-github.yml  publish-pypi.yml
parrotjoy/: __main__.py  audiorecord.py  camera_cv.py  cli.py  detect_pitch.py  draw_sound.py  looper.py  main.py  metronome.py  resources.py  tracks.py  videosynth.py
parrotjoy/scenes/: scene.py  strawberries.py  videosynth.py
parrotjoy/scenes/looper/: camera.py  gif_saver.py  looper.py  recording_light.py  recording_wave.py  track_recorder.py
tests/: test_first.py
