[metadata]
license_files = LICENSE.txt

[bdist_wheel]
universal=1

## http://coverage.readthedocs.io/en/latest/config.html
#[coverage:run]
#timid = True

## http://pytest.org/latest/customize.html#adding-default-options
[tool:pytest]
addopts=-v --cov parrotjoy parrotjoy/ tests/

## http://mypy.readthedocs.io/en/latest/config_file.html
[mypy]
ignore_missing_imports = True

#[flake8]
#max-line-length = 120
#max-complexity = 10
#exclude = build,dist,docs/conf.py,somepackage/migrations,*.egg-info

## Run with: pylint --rcfile=setup.cfg somepackage
[pylint.'MESSAGES CONTROL']
disable = C0103,C0111,E1101,no-member,too-few-public-methods,too-many-instance-attributes,fixme
ignore = migrations,no-member
ignore-docstrings = yes
output-format = colorized
init-hook='import sys; sys.path.append(".")'


# https://tox.readthedocs.io/en/latest/example/basic.html

[tox:tox]
#envlist = py{27,34,35,36,37}
envlist = py{310}

[testenv]
basepython =
    py310: python3.10
deps = -rrequirements.dev.txt
commands =
    pylint parrotjoy
    pytest tests
setenv =
    SDL_VIDEODRIVER=dummy
    SDL_AUDIODRIVER=disk
